Breakpoints fixed for cards so they no longer overlap between 992px and 1515px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,6 @@ width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.5;
     position: relative;
 }
 
@@ -80,7 +79,7 @@ width: 100%;
     letter-spacing: 3px;
     padding: 10px;
     position: relative;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .name h1 a {
@@ -106,7 +105,7 @@ width: 100%;
     line-height: 20px;
     padding-bottom: 30px;
     position: relative;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .title h2 a {
@@ -990,5 +989,12 @@ padding-left: 90px;
             min-height: 240px;
             margin: 0 auto;
             max-width: 50%;
+        }
+    }
+
+    @media only screen and (min-width: 992px) and (max-width: 1515px) {
+        .pattcard {
+            width: 100%;
+            display: block;
         }
     }
